--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
   db:
     image: postgres
     command: postgres -p ${DRC_DB_PORT:-5440}
+    expose:
+      - "5440:5440"
   web:
     build: .
     environment:
