--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3.4'
 services:
   db:
     image: postgres
-    command: postgres -p ${DRC_DB_PORT:-5440}
+    command: postgres -p 5440
     expose:
       - 5440:5440
   web:
